[package]
name = "mb-reloaded"
version = "0.1.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
thiserror = "1.0.18"
sdl2 = { version = "0.34.0", features = ["unsafe_textures", "mixer"] }

[workspace]
members = [
    ".",
    "tools"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "s"