[package]
name = "mb-reloaded"
version = "0.1.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.4"
num_enum = "0.5.0"
thiserror = "1.0.18"
rand = "0.7.3"
sdl2 = { version = "0.34.0", features = ["mixer"] }

[workspace]
members = [
    ".",
    "tools"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1