[package]
name = "mb-reloaded"
version = "0.1.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
byteorder = "1.4.3"
num_enum = "0.7.0"
thiserror = "1.0.37"
rand = "0.8.5"
ref-cast = "1.0.9"
sdl2 = { version = "0.35.2", features = ["mixer"] }
mb-sdl2-effects = { path = "sdl2-effects" }

[workspace]
members = [
    ".",
    "tools"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1